--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>
+  Trabajo individual Lia
+</title>
+<link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <!--
+    TODO:
+    1. Crear un archivo style.css
+    2. Crear una etiqueta link:css dentro dentro de la información meta del documento.
+    3. Dar clic en https://tinyurl.com/mrx9rcdz para copiar los reset del gist y pegarlo en el archivo style.css.
+    4. Crear el markup apartir de la imagen/screenshot (ayudarnos con la tabla periódica ubicada al final del documento en enlaces útiles).
+    5. Crear una referencia en nuestro archivo style.css de cada elemento que creamos en el archivo index.html para poderle dar formato posteriormente.
+  -->
+<div>
+  <h2>
+  Tramas,2021
+</h2>
+
+<h3>
+  Renata Flores
+</h3>
+
+
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore culpa suscipit sint ea, aut quis eaque perferendis
+    libero sapiente odio ipsa deserunt est praesentium eveniet a, voluptatum velit minima! Nihil.
+  </p>
+</div>
+
+<div>
+<img src="https://picsum.photos/100" alt="imagen">
+<img src="https://picsum.photos/100" alt="imagen">
+<img src="https://picsum.photos/100" alt="imagen">
+<img src="https://picsum.photos/100" alt="imagen">
+</div>
+
+
+
+</body>
+
+</html>
+
 
