--- a/index.html
+++ b/index.html
@@ -19,28 +19,22 @@
     4. Crear el markup apartir de la imagen/screenshot (ayudarnos con la tabla periódica ubicada al final del documento en enlaces útiles).
     5. Crear una referencia en nuestro archivo style.css de cada elemento que creamos en el archivo index.html para poderle dar formato posteriormente.
   -->
-<div>
+<header>
   <h2>
-  Tramas,2021
-</h2>
-
-<h3>
-  Renata Flores
-</h3>
-
-
+    Encuadernación
+  </h2>
   <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore culpa suscipit sint ea, aut quis eaque perferendis
-    libero sapiente odio ipsa deserunt est praesentium eveniet a, voluptatum velit minima! Nihil.
-  </p>
-</div>
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum, in? Aliquid, eaque non voluptas eveniet ex esse. Hic consequatur alias doloremque! Neque reiciendis corporis minus a commodi unde, porro repudiandae!
 
-<div>
+  </p>
+</header>
+
+<section>
 <img src="https://picsum.photos/100" alt="imagen">
 <img src="https://picsum.photos/100" alt="imagen">
 <img src="https://picsum.photos/100" alt="imagen">
 <img src="https://picsum.photos/100" alt="imagen">
-</div>
+</section>
 
 
 
